Add profile public view and tune profile edit form
- Breaks out the .ui.card for the profile metadata to an include
- This include is used on the public and edit pages
- Edit form layout was reverted with the new include. Card is to the
  right again, not the sidebar.
- Added SocialAccount listing to the profile metadata as well
- Extends the normal project view template, to avoid a duplicate
  interface. Some blocks/elements are dropped in the profile project
  listing.

--- a/readthedocsext/theme/templates/profiles/base_profile_edit.html
+++ b/readthedocsext/theme/templates/profiles/base_profile_edit.html
@@ -1,67 +1,1 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-{% load core_tags %}
-
-{% block content %}
-  <div class="ui stackable grid">
-    <div class="five wide computer five wide tablet sixteen wide mobile column">
-      <div class="ui vertical pointing fluid menu">
-        {% block profile-admin-nav %}
-          <a class="item {% block profile_admin_details %}{% endblock %}" href="{% url 'profiles_profile_edit' %}">{% trans "Account" %}</a>
-          <a class="item {% block profile_admin_change_email %}{% endblock %}" href="{% url 'account_email' %}">{% trans "Email addresses" %}</a>
-          <a class="item {% block profile_admin_change_password %}{% endblock %}" href="{% url 'account_change_password' %}">{% trans "Security" %}</a>
-          <a class="item {% block profile_admin_social_accounts %}{% endblock %}" href="{% url 'socialaccount_connections' %}">{% trans "Connected services" %}</a>
-          <a class="item {% block profile-admin-security-log %}{% endblock %}" href="{% url 'profiles_security_log' %}">{% trans "Security log" %}</a>
-          <a class="item {% block profile_admin_tokens %}{% endblock %}" href="{% url 'profiles_tokens' %}">{% trans "API tokens" %}</a>
-          <a class="item {% block profile_admin_gold_edit %}{% endblock %}" href="{% url 'gold_detail' %}">{% trans "Gold membership" %}</a>
-
-          {% if USE_PROMOS %}
-            <a class="item {% block profile_admin_advertising %}{% endblock %}" href="{% url 'account_advertising' %}">{% trans "Advertising" %}</a>
-          {% endif %}
-        {% endblock %}
-      </div>
-
-      {% block edit_sidebar %}
-        {% comment %}
-        <div class="ui basic segment">
-          <h2 class="ui small header">{% trans "Help topics" %}</h2>
-          {% block edit_sidebar_help_topics %}
-            <div data-embed-doc-view="{% block edit_sidebar_embed_doc %}{% endblock %}"
-                 data-bind="template: { name: 'doc-topics' }">
-            </div>
-          {% endblock edit_sidebar_help_topics %}
-        </div>
-        <div class="ui basic segment">
-          <a href="https://docs.readthedocs.io/en/stable/" target="_blank">
-            View our full docs
-          </a>
-        </div>
-        {% endcomment %}
-
-        {% block edit_sidebar_extra %}
-        {% endblock edit_sidebar_extra %}
-      {% endblock edit_sidebar %}
-
-    </div>
-    <div class="eleven wide computer eleven wide tablet sixteen wide mobile column">
-
-      <h2 class="ui medium dividing header">
-        {% block edit_content_header %}
-        {% endblock edit_content_header %}
-        <div class="sub header">
-          {% block edit_content_subheader %}
-          {% endblock edit_content_subheader %}
-        </div>
-      </h2>
-
-      <div id="edit-content">
-        {% block edit_content %}
-        {% endblock edit_content %}
-      </div>
-
-    </div>
-
-    {% include "includes/utils/embed_docs.html" %}
-  </div>
-{% endblock %}
+base_edit.html
