--- a/readthedocsext/theme/templates/gold/subscription_confirm_delete.html
+++ b/readthedocsext/theme/templates/gold/subscription_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "profiles/base_profile_edit.html" %}
+{% extends "profiles/base_edit.html" %}
 {% load i18n %}
 
 {% block profile-admin-gold-edit %}active{% endblock %}
