--- a/readthedocsext/theme/templates/projects/project_dashboard_base.html
+++ b/readthedocsext/theme/templates/projects/project_dashboard_base.html
@@ -25,26 +25,11 @@
             <div class="meta">{% trans "Some resources from our documentation" %}</div>
             <div class="description">
               <div class="ui bulleted list">
-                <a class="item" href="https://docs.readthedocs.io/en/stable/tutorial/index.html" target="_blank">
-                  Read the Docs tutorial
-                  <i class="fas fa-external-link small light grey middle aligned icon"></i>
-                </a>
-                <a class="item" href="https://docs.readthedocs.io/en/stable/intro/getting-started-with-sphinx.html" target="_blank">
-                  Getting started with Sphinx
-                  <i class="fas fa-external-link small light grey middle aligned icon"></i>
-                </a>
-                <a class="item" href="https://docs.readthedocs.io/en/stable/intro/getting-started-with-mkdocs.html" target="_blank">
-                  Getting started with MkDocs
-                  <i class="fas fa-external-link small light grey middle aligned icon"></i>
-                </a>
-                <a class="item" href="https://docs.readthedocs.io/en/stable/config-file/index.html" target="_blank">
-                  Configuration file reference
-                  <i class="fas fa-external-link small light grey middle aligned icon"></i>
-                </a>
-                <a class="item" href="https://docs.readthedocs.io/en/stable/build-customization.html" target="_blank">
-                  Build process customization
-                  <i class="fas fa-external-link small light grey middle aligned icon"></i>
-                </a>
+                {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/tutorial/index.html" text="Read the Docs tutorial" is_external=True class="item" %}
+                {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/intro/getting-started-with-sphinx.html" text="Getting started with Sphinx" is_external=True class="item" %}
+                {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/intro/getting-started-with-mkdocs.html" text="Getting started with MkDocs" is_external=True class="item" %}
+                {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/config-file/index.html" text="Configuration file reference" is_external=True class="item" %}
+                {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/en/stable/build-customization.html" text="Build process customization" is_external=True class="item" %}
               </div>
             </div>
           </div>
