--- a/readthedocsext/theme/templates/projects/project_list.html
+++ b/readthedocsext/theme/templates/projects/project_list.html
@@ -2,31 +2,10 @@
 
 {% load i18n %}
 
-{% load pagination_tags %}
-
 {% block title %}
-{% blocktrans with tag.name as tag %}Projects tagged with {{ tag }}{% endblocktrans %}
-{% endblock %}
-
-{% block nav-browse %}class="active"{% endblock %}
-
-{% block content-header %}
-  <div class="ui basic segment">
-    <div class="ui container">
-      <h1>{% blocktrans with tag.name as tag %}Projects tagged with "{{ tag }}"{% endblocktrans %}</h1>
-    </div>
-  </div>
+  {% blocktrans with tag.name as tag %}Projects tagged with {{ tag }}{% endblocktrans %}
 {% endblock %}
   
 {% block content %}
-  {% autopaginate project_list 15 %}
-    <div class="ui basic segment">
-      <h3>{% trans "Browse projects" %}</h3>
-
-      <ul class="ui list">
-        {% include "core/project_list_detailed.html" %}
-      </ul>
-
-    </div>
-  {% paginate %}
+  {% include "projects/partials/project_tagged_list.html" with objects=project_list tag=tag %}
 {% endblock %}
