--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -1,6 +1,7 @@
 {% extends "includes/crud/table_list.html" %}
 
 {% load i18n %}
+{% load humanize %}
 
 {% load core_tags %}
 {% load privacy_tags %}
@@ -135,9 +136,9 @@
   <div class="sub header">
     {% with build=object.last_build %}
       <time data-content="{{ build.date }}">
-        {# Translators: this will read like "1 month, 3 days ago" #}
-        {% blocktrans with build.date|timesince as date trimmed %}
-          Last build {{ date }} ago
+        {# Translators: this will read like "Last built 1 month, 3 days ago" #}
+        {% blocktrans with build.date|naturaltime as date trimmed %}
+          Last built {{ date }}
         {% endblocktrans %}
       </time>
     {% endwith %}
@@ -194,16 +195,7 @@
   {% with build=object.last_build %}
     {% if build %}
       <div class="item">
-        <span data-bind="with: create_popup">
-          <a
-            data-bind="popup: {}"
-            class="ui basic mini compact button"
-            href="{% url "builds_detail" build.project.slug build.pk %}">
-            {% include "builds/includes/status_icon.html" with build=build circular=False size="normal" %}
-            <code>Build #{{ build.id }}</code>
-          </a>
-          {% include "includes/popupcards/build.html" with build=build %}
-        </span>
+        {% include "includes/elements/chips/build.html" with build=build text=object.project.name %}
       </div>
     {% endif %}
   {% endwith %}
