Fix project popup card icon

--- a/readthedocsext/theme/templates/includes/elements/chips/project.html
+++ b/readthedocsext/theme/templates/includes/elements/chips/project.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="item">
-      <i class="fad fa-code-commit icon"></i>
+      <i class="fad fa-book icon"></i>
       <div class="content">
         <div class="header">{% trans "Documentation" %}</div>
         <div class="description">
