--- a/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
+++ b/readthedocsext/theme/templates/socialaccount/partials/social_account_list.html
@@ -55,7 +55,29 @@
 {% endblock list_item_image %}
 
 {% block list_item_header %}
-  {{ object.extra_data.login }}
+  {% with account=object.get_provider_account %}
+    {% comment %}
+      Allauth makes showing just the username field harder than it needs to be.
+      Normally, these show "display name" (which can be the full name on the user
+      profile), instead of the username.
+
+      This code is not ideal and should probably be backend code.
+    {% endcomment %}
+    {% with brand_id=account.get_brand.id %}
+      {% if brand_id == 'github' %}
+        {{ object.extra_data.login }}
+      {% elif brand_id == 'bitbucket_oauth2' %}
+        {{ object.extra_data.username }}
+      {% elif brand_id == 'gitlab' %}
+        {{ object.extra_data.username }}
+      {% elif brand_id == 'google' %}
+        {{ object.extra_data.email }}
+      {% else %}
+        {# Fall back, just in case. This uses the Account.to_str() method ultimately #}
+        {{ account }}
+      {% endif %}
+    {% endwith %}
+  {% endwith %}
   <div class="sub header">
     {% blocktrans with time_since=object.last_login|timesince trimmed %}
       Logged in {{ time_since }} ago
@@ -66,7 +88,8 @@
 {% block list_item_meta_items %}
   {% with object.get_provider_account as provider %}
     <span class="ui label">
-      <i class="fa-brands fa-{{ object.provider }} fa-{{ provider.get_brand.id }} icon"></i>
+      {# get_brand.name|lower here because we can't use `id`, `Bitbucket2Provider.id == 'bitbucket_oauth2'` #}
+      <i class="fa-brands fa-{{ provider.get_brand.name|lower }} icon"></i>
       {{ provider.get_brand.name }}
     </span>
   {% endwith %}
