Fix social account list with backend code
Adds a filter to get the correct Allauth provider account field,
username or email.

This also addresses the issue for the profile card view.

Refs #147

--- a/readthedocsext/theme/templates/profiles/includes/profile_card.html
+++ b/readthedocsext/theme/templates/profiles/includes/profile_card.html
@@ -1,5 +1,7 @@
 {% load i18n %}
+
 {% load gravatar %}
+{% load ext_theme_tags %}
 
 <div class="ui centered card">
   {% if is_editable %}
@@ -52,7 +54,7 @@
                 {% blocktrans with provider=provider.get_brand.name asvar text_provider trimmed %}
                   User's {{ provider }} profile
                 {% endblocktrans %}
-                {% include "includes/elements/link.html" with is_external=True url=socialaccount.get_profile_url text=socialaccount.extra_data.login label=text_provider %}
+                {% include "includes/elements/link.html" with is_external=True url=socialaccount.get_profile_url text=socialaccount|get_account_username label=text_provider %}
               </div>
             </div>
           {% endwith %}
