--- a/readthedocsext/theme/templates/profiles/private/edit_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/edit_profile.html
@@ -40,27 +40,10 @@
     </p>
 
     {% trans "Delete account" as action_text %}
-    <a class="ui button" data-bind="click: $root.show_modal('delete-account')">
+    <a class="ui button" href="{% url 'delete_account' %}">
       <i class="fa-duotone fa-trash icon"></i>
       {{ action_text }}
     </a>
-    <div class="ui mini modal" data-modal-id="delete-account">
-      <div class="header">
-        {{ action_text }}
-      </div>
-      <div class="content">
-        {% blocktrans trimmed %}
-          Are you sure you want to delete your account? This action cannot
-          be undone.
-        {% endblocktrans %}
-      </div>
-      <div class="actions">
-        <form method="POST" action="{% url 'delete_account' %}">
-          {% csrf_token %}
-          <input class="ui negative button" type="submit" value="{{ action_text }}">
-        </form>
-      </div>
-    </div>
   </div>
 {% endblock edit_content %}
 
