Add automation rule match list
- Use table list for rules
- Fix listing button bugs
- Add list for events

Refs #41

--- a/readthedocsext/theme/templates/projects/automation_rule_list.html
+++ b/readthedocsext/theme/templates/projects/automation_rule_list.html
@@ -9,6 +9,7 @@
 
 {% block project_edit_content %}
   {% include "projects/partials/edit/automation_rule_list.html" with objects=object_list %}
+  {% include "projects/partials/edit/automation_rule_activity.html" with objects=matches %}
 {% endblock %}
 
 {% block project_edit_sidebar_embed_doc %}automation-rules{% endblock %}
